lib/bait/tests/inout_error/struct_decl.out
lib/bait/tests/inout_error/struct_decl.in.bt:3:4 error: duplicate field name foo
