lib/bait/tests/inout_error/struct_decl.in.bt
struct MyStruct{
	foo i32
	foo bool
}
